examples/should-fail/f48_impred_bad_function_target_type.lean
def demo4_bad_function_target_type : Prop :=
  (A : Type) -> (B : Type) -> Type
